Updates from Overleaf

--- a/latex/bib.bib
+++ b/latex/bib.bib
@@ -590,6 +590,63 @@ abstract = { Human language is unparalleled in both its expressive capacity and 
   year={2016}
 } %https://aclanthology.org/W16-4117.pdf
 
+@inproceedings{taule2008ancora,
+  title={Ancora: Multilevel annotated corpora for Catalan and Spanish.},
+  author={Taul{\'e}, Mariona and Mart{\'\i}, Maria Ant{\`o}nia and Recasens, Marta},
+  booktitle={Lrec},
+  volume={2008},
+  pages={96--101},
+  year={2008}
+}
+
+@book{turkish_2020,
+  address    = {Oxford},
+  author     = {Gerjan van Schaaik},
+  pages      = {784},
+  publisher  = {Oxford University Press},
+  title      = {The Oxford Turkish Grammar},
+  year       = {2020},
+  bestfn     = {eurasia\vanschaaik_turkish2020.pdf},
+  besttxt    = {ptxt2\eurasia\vanschaaik_turkish2020.txt},
+  cfn        = {eurasia\vanschaaik_turkish2020.pdf},
+  fn         = {eurasia\vanschaaik_turkish2020.pdf, eurasia\vanschaaik_turkish2020_o.pdf},
+  hhtype     = {grammar},
+  inlg       = {English [eng]},
+  lgcode     = {Turkish [tur]},
+  macro_area = {Eurasia},
+  src        = {hh}
+}
+
+@book{butt_2019_spanish,
+  address        = {London},
+  author         = {Butt, John and Benjamin, Carmen and Antonia Moreira Rodríguez},
+  edition        = {6},
+  pages          = {xii+608},
+  publisher      = {Routledge},
+  series         = {Routledge Reference Grammars},
+  title          = {A New Reference Grammar of Modern Spanish},
+  year           = {2019},
+  bestfn         = {eurasia\butt_spanish2019.pdf},
+  besttxt        = {ptxt2\eurasia\butt_spanish2019.txt},
+  cfn            = {eurasia\butt_spanish2019.pdf},
+  citekeys       = {langsci318:buttetal2019},
+  fn             = {eurasia\butt_spanish2019.pdf, eurasia\butt_spanish2019_o.pdf},
+  hhtype         = {grammar},
+  inlg           = {English [eng]},
+  isreferencedby = {langsci318},
+  lgcode         = {Spanish [spa]},
+  macro_area     = {Eurasia},
+  sortname       = {Butt, John and Carmen Benjamin and Antonia Moreira Rodriguez},
+  src            = {hh, langsci}
+}
+
+@book{baerman2015understanding,
+  title={Understanding and measuring morphological complexity},
+  editor={Baerman, Matthew and Brown, Dunstan and Corbett, Greville G},
+  year={2015},
+  publisher={Oxford University Press (UK)}
+}
+
 @article{koplenig2023languages,
   title={Languages with more speakers tend to be harder to (machine-) learn},
   author={Koplenig, Alexander and Wolfer, Sascha},
@@ -630,4 +687,43 @@ abstract = { Human language is unparalleled in both its expressive capacity and 
   pages={327--342},
   year={2019},
   publisher={MIT Press}
+}
+
+@incollection{ehret2016informationtheoretic,
+  title = {An Information-Theoretic Approach to Assess Linguistic Complexity},
+  booktitle = {Complexity, {{Isolation}}, and {{Variation}}},
+  author = {Ehret, Katharina and Szmrecsanyi, Benedikt},
+  editor = {Baechler, Raffaela and Seiler, Guido},
+  year = 2016,
+  month = jul,
+  pages = {71--94},
+  publisher = {De Gruyter},
+  isbn = {978-3-11-034896-5},
+  langid = {english}
+}
+
+@article{moscosodelpradomartin2004putting,
+  title = {Putting the Bits Together: An Information Theoretical Perspective on Morphological Processing},
+  shorttitle = {Putting the Bits Together},
+  author = {{Moscoso del Prado Mart{\'\i}n}, Ferm{\'\i}n and Kosti{\'c}, Aleksandar and Baayen, R. Harald},
+  year = 2004,
+  month = nov,
+  journal = {Cognition},
+  volume = {94},
+  number = {1},
+  pages = {1--18},
+  issn = {0010-0277},
+  doi = {10.1016/j.cognition.2003.10.015},
+  urldate = {2025-12-17},
+  keywords = {Compound,Derivation,Inflection,Information theory,Lexical decision,Morphology}
+}
+
+@inproceedings{sagot2013comparing,
+  title = {Comparing {{Complexity Measures}}},
+  booktitle = {Computational {{Approaches}} to {{Morphological Complexity}}},
+  author = {Sagot, Beno{\^i}t},
+  year = 2013,
+  month = feb,
+  address = {Paris, France},
+  langid = {english}
 }
